# csaltpp

./: .readthedocs.yaml  README.rst  tree.txt
csalt++/: CMakeLists.txt
csalt++/include/: matrix.hpp
csalt++/test/: CMakeLists.txt  \  test_matrix.cpp
docs/doxygen/: Doxyfile  requirements.txt
docs/doxygen/generated_docs/html/: index.html
docs/doxygen/generated_docs/latex/: index.tex  refman.tex
docs/doxygen/html/: _2home_2jonwebb_2Code_Dev_2C_09_09_2csalt_09_09_2csalt_09_09_2include_2matrix_8hpp-example.html  annotated.html  classes.html  classslt_1_1DenseMatrix-members.html  classslt_1_1DenseMatrix.html  classslt_1_1DenseMatrix__coll__graph.map  classslt_1_1DenseMatrix__inherit__graph.md5  classslt_1_1MatrixBase-members.html  classslt_1_1MatrixBase.html  classslt_1_1MatrixBase__inherit__graph.map  classslt_1_1MatrixBase__inherit__graph.md5  classslt_1_1SparseCOOMatrix-members.html  classslt_1_1SparseCOOMatrix.html  classslt_1_1SparseCOOMatrix__coll__graph.map  classslt_1_1SparseCOOMatrix__inherit__graph.md5  dir_48b030b9e6e81ecd3a2b6cc25692d49e.html  dir_70bb376b6ce1336760a57fd38869a135.html  examples.html  files.html  functions.html  functions_func.html  functions_vars.html  globals.html  globals_defs.html  graph_legend.html  group__data__access.html  hierarchy.html  index.html  inherit_graph_0.map  inherit_graph_0.md5  inherit_graph_1.map  inherit_graph_1.md5  inherit_graph_2.map  inherit_graph_2.md5  inherit_graph_3.map  inherit_graph_3.md5  inherit_graph_4.map  inherit_graph_4.md5  inherit_graph_5.map  inherit_graph_5.md5  (+28 more)
docs/doxygen/html/search/: all_0.js  all_1.js  all_10.js  all_2.js  all_3.js  all_4.js  all_5.js  all_6.js  all_7.js  all_8.js  all_9.js  all_a.js  all_b.js  all_c.js  all_d.js  all_e.js  all_f.js  classes_0.js  classes_1.js  classes_2.js  classes_3.js  defines_0.js  files_0.js  functions_0.js  functions_1.js  functions_2.js  functions_3.js  functions_4.js  functions_5.js  functions_6.js  functions_7.js  functions_8.js  functions_9.js  (+16 more)
docs/doxygen/sphinx_docs/: Matrix.rst  Vector.rst  conf.py  index.rst
docs/doxygen/xml/: _2home_2jonwebb_2Code_Dev_2C_09_09_2csalt_09_09_2csalt_09_09_2include_2matrix_8hpp-example.xml  classslt_1_1DenseMatrix.xml  classslt_1_1MatrixBase.xml  classslt_1_1SparseCOOMatrix.xml  dir_48b030b9e6e81ecd3a2b6cc25692d49e.xml  dir_70bb376b6ce1336760a57fd38869a135.xml  group__data__access.xml  index.xml  matrix_8hpp.xml  namespaceslt.xml  structslt_1_1SparseCOOMatrix_1_1COOComparator.xml  structslt_1_1simd__ops.xml  structslt_1_1simd__ops_3_01double_01_4.xml  structslt_1_1simd__ops_3_01float_01_4.xml  structslt_1_1simd__traits.xml  structslt_1_1simd__traits_3_01double_01_4.xml  structslt_1_1simd__traits_3_01float_01_4.xml
scripts/Windows/: debug.bat  install.bat  static.bat
scripts/bash/: debug.sh  install.sh  static.sh
scripts/zsh/: debug.zsh  install.zsh  static.zsh
(+2 files in other folders)
